# creatur-image-wains

./: ChangeLog.md  README.md  creatur-image-wains.cabal
src/ALife/Creatur/Wain/: ExamineAgent.hs  Image.hs  ImageDB.hs  ImageTweaker.hs  ImageWain.hs  Object.hs
src/ALife/Creatur/Wain/Image/: ExamineAgent.hs  Object.hs  Pattern.hs  PatternDB.hs  Tweaker.hs  Wain.hs
test/: Main.hs
test/ALife/Creatur/Wain/: ImageQC.hs
test/ALife/Creatur/Wain/Image/: PatternQC.hs
